Resources/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_ede_1_altergo.txt
[kernel] Parsing ede_1_rte.c (with preprocessing)
[kernel] ede_1_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing ede_1.c (with preprocessing)
  3     [kernel:typing:implicit-function-declaration] ede_1.c:3: Warning:
[kernel] Frama-C aborted: invalid user input.
